fix: 鼠标移到边缘时会剧烈闪的问题

--- a/src/content.scss
+++ b/src/content.scss
@@ -488,6 +488,13 @@
     height: 250px;
   }
 
+  [data-utags_list_node] {
+    /* 在 opacity 100% 与 opacity 小于 100% 的元素之间移动时，鼠标移到边缘时会剧烈闪烁。*/
+    /* 改成 99.99% 不闪烁，但在某些场合影响层叠效果。 */
+    /* 增加延迟，可以使它不闪烁 */
+    transition: opacity 0.1s ease-in;
+  }
+
   [data-utags_list_node*=",标题党,"],
   [data-utags_list_node*=",推广,"],
   [data-utags_list_node*=",无聊,"],
@@ -532,8 +539,7 @@
   }
 
   [data-utags_list_node]:hover {
-    /* 如果设置为 100% ，鼠标移到边缘时会剧烈闪烁 */
-    opacity: 99.99% !important;
+    opacity: 100% !important;
   }
 
   /* For debugging */
