feat: support special tags on vxna and planet of v2ex.com (#47)

--- a/src/sites/z001/001-v2ex.scss
+++ b/src/sites/z001/001-v2ex.scss
@@ -69,4 +69,11 @@
       top: -9999px;
     }
   }
+
+  /* VXNA 列表 */
+  .xna-entry,
+  /* Planet 列表 */
+  .planet-post {
+    --utags-list-node-display: flex;
+  }
 }
