feat: Add shadowRoot traversal functionality; Optimize bilibili.com website support (#95)

--- a/packages/extension/src/content.scss
+++ b/packages/extension/src/content.scss
@@ -194,6 +194,8 @@
       svg {
         fill: currentColor !important;
         vertical-align: -3px;
+        margin: 0 !important;
+        padding: 0 !important;
       }
 
       * {
@@ -242,12 +244,13 @@
   }
 
   .utags_captain_tag:focus,
-  *:hover + .utags_ul .utags_captain_tag,
+  :not(.utags_ul):hover + .utags_ul .utags_captain_tag,
   /* utags_position_selector matches the ancestor elements */
   [data-utags_fit_content]:hover .utags_ul .utags_captain_tag,
   .utags_ul:hover .utags_captain_tag,
+  .utags_ul.utags_ul_active .utags_captain_tag,
   .utags_show_all .utags_captain_tag,
-  :not(a):not([data-utags_node_type="link"]) + .utags_ul .utags_captain_tag {
+  :not(a):not([data-utags_node_type="link"]):not(.utags_ul) + .utags_ul .utags_captain_tag {
     opacity: 100%;
     width: calc(var(--utags-captain-tag-size) + 8px) !important;
     height: calc(var(--utags-captain-tag-size) + 8px) !important;
