perf: Refined the logic for calculating the UTags element's position; update vimium selector

--- a/packages/extension/src/sites/z001/006-reddit.com.scss
+++ b/packages/extension/src/sites/z001/006-reddit.com.scss
@@ -59,6 +59,9 @@
   article a[slot="title"],
   /* Recent Posts */
   recent-posts a {
+    /* Fix title can't hover */
+    position: relative;
+
     &[data-utags_fit_content="1"] {
       min-width: unset !important;
       width: fit-content !important;
