--- a/packages/extension/src/sites/z999/001-pxxnhub.com.scss
+++ b/packages/extension/src/sites/z999/001-pxxnhub.com.scss
@@ -1,6 +1,47 @@
 :not(#a):not(#b):not(#c) {
-  .usernameWrap {
-    .utags_ul_0 .utags_captain_tag {
+  /* default */
+  a + {
+    .utags_ul_0 {
+      /* right-center */
+      object-position: 200% 50%;
+      --utags-notag-ul-disply: var(--utags-notag-ul-disply-5);
+      --utags-notag-ul-height: var(--utags-notag-ul-height-5);
+      --utags-notag-ul-position: var(--utags-notag-ul-position-5);
+      --utags-notag-ul-top: var(--utags-notag-ul-top-5);
+      --utags-notag-captain-tag-top: var(--utags-notag-captain-tag-top-5);
+      --utags-notag-captain-tag-left: var(--utags-notag-captain-tag-left-5);
+      --utags-captain-tag-background-color: var(
+        --utags-captain-tag-background-color-overlap
+      );
+    }
+
+    .utags_ul_1 {
+      /* left-bottom */
+      object-position: 0% 200%;
+    }
+  }
+
+  .utags_custom_bookmark_btn:hover,
+  .utags_custom_bookmark_btn.starred:hover {
+    svg {
+      fill: none;
+      path {
+        stroke: var(--utags-star-tag-color);
+      }
+    }
+  }
+  .utags_custom_bookmark_btn.starred {
+    svg {
+      fill: var(--utags-star-tag-color);
+      path {
+        stroke: var(--utags-star-tag-color);
+      }
+    }
+  }
+
+  /* @deprecated */
+  .usernameWrap__ {
+    .utags_ul_0__ .utags_captain_tag {
       left: -20px;
     }
     .utags_ul_1::before {
@@ -9,7 +50,8 @@
     }
   }
 
-  .vidTitleWrapper .title {
+  /* @deprecated */
+  .vidTitleWrapper__ .title {
     .utags_ul_0 {
       display: block !important;
       height: 0;
@@ -29,7 +71,8 @@
     }
   }
 
-  ul.videos .thumbnail-info-wrapper {
+  /* @deprecated */
+  ul.videos .thumbnail-info-wrapper__ {
     position: relative;
     .title {
       .utags_ul_0 {
