--- a/packages/extension/src/content.scss
+++ b/packages/extension/src/content.scss
@@ -13,6 +13,7 @@
     }
   }
 
+  &.utags_hide_all_tags:not(#utags_should_has_higher_specificity),
   &[data-utags="off"] {
     .utags_ul {
       display: none !important;
