--- a/packages/extension/src/sites/z001/010-threads.com.scss
+++ b/packages/extension/src/sites/z001/010-threads.com.scss
@@ -2,12 +2,22 @@
   /* repo title in https://github.com/username/reponame */
   a[href^="/@"][data-utags] + {
     .utags_ul_0 {
-      --utags-notag-ul-disply: var(--utags-notag-ul-disply-4);
-      --utags-notag-ul-height: var(--utags-notag-ul-height-4);
-      --utags-notag-ul-position: var(--utags-notag-ul-position-4);
-      --utags-notag-ul-top: var(--utags-notag-ul-top-4);
-      --utags-notag-captain-tag-top: -22px;
-      --utags-notag-captain-tag-left: var(--utags-notag-captain-tag-left-4);
+      /* right-center */
+      object-position: 200% 50%;
+      --utags-notag-ul-disply: var(--utags-notag-ul-disply-5);
+      --utags-notag-ul-height: var(--utags-notag-ul-height-5);
+      --utags-notag-ul-position: var(--utags-notag-ul-position-5);
+      --utags-notag-ul-top: var(--utags-notag-ul-top-5);
+      --utags-notag-captain-tag-top: var(--utags-notag-captain-tag-top-5);
+      --utags-notag-captain-tag-left: var(--utags-notag-captain-tag-left-5);
+      --utags-captain-tag-background-color: var(
+        --utags-captain-tag-background-color-overlap
+      );
+    }
+
+    .utags_ul_1 {
+      /* left-bottom */
+      object-position: 0% 200%;
     }
   }
 }
