feat: Fix the issue where `document.documentElement` attributes (like `data-utags`) are removed by some websites (e.g., hydration processes) (v0.24.0)   - Watch for `href` attribute changes on anchor tags to trigger tag updates, improving support for single-page applications (SPAs).

--- a/packages/extension/src/content.scss
+++ b/packages/extension/src/content.scss
@@ -662,20 +662,17 @@
   }
 }
 
-[data-utags_display-effect-of-the-visited-content="4"]
-  [data-utags_list_node*=",:visited,"] {
+[data-utags-visited="4"] [data-utags_list_node*=",:visited,"] {
   [data-utags_condition_node][data-utags_visited="1"] {
     color: var(--utags-visited-title-color) !important;
   }
 }
 
-[data-utags_display-effect-of-the-visited-content="2"]
-  [data-utags_list_node*=",:visited,"] {
+[data-utags-visited="2"] [data-utags_list_node*=",:visited,"] {
   opacity: var(--utags-visited-opacity);
 }
 
-[data-utags_display-effect-of-the-visited-content="3"]
-  [data-utags_list_node*=",:visited,"] {
+[data-utags-visited="3"] [data-utags_list_node*=",:visited,"] {
   opacity: 5%;
   display: none;
 }
