feat: Recalculate tag positions when the "Show hidden items" setting is toggled to ensure correct display (#142) (v0.25.0)
- Recalculate tag positions when the "Show hidden items" setting is toggled to ensure correct display.
- Optimize tag position updating: automatically hide tags if their target elements are invisible.
- Refactor Vimium hint marker detection logic.
- Add special tag filtering functionality for kemono.cr website

--- a/packages/extension/src/sites/z999/005-kemono.su.scss
+++ b/packages/extension/src/sites/z999/005-kemono.su.scss
@@ -1,4 +1,9 @@
 :not(#a):not(#b):not(#c) {
+  /* Artists */
+  .card-list__items > a.user-card {
+    --utags-list-node-display: flex;
+  }
+
   /* user card */
   a.user-header__avatar +,
   a.user-card +,
@@ -15,9 +20,6 @@
       --utags-captain-tag-background-color: var(
         --utags-captain-tag-background-color-overlap
       );
-      transition:
-        top ease 0.1s,
-        left ease 0.1s;
     }
 
     .utags_ul_1 {
@@ -27,9 +29,6 @@
       z-index: 100;
       margin-top: -6px !important;
       margin-left: 4px !important;
-      transition:
-        top ease 0.1s,
-        left ease 0.1s;
       .utags_text_tag {
         --utags-text-tag-background-color: yellow;
       }
