feat: Support the hidden image feature of Bobby's Pixiv Utils on pixiv.net (v0.25.2)

--- a/packages/extension/src/sites/z001/026-pixiv.net.scss
+++ b/packages/extension/src/sites/z001/026-pixiv.net.scss
@@ -25,4 +25,9 @@
   .charcoal-modal-body .overflow-y-auto {
     position: relative;
   }
+
+  /* Compatibility with https://greasyfork.org/scripts/525211-bobby-s-pixiv-utils */
+  [data-utags_list_node][data-pixiv_utils_blocked] {
+    display: var(--utags-list-node-display);
+  }
 }
