feat: Apply utags to hitomi.la (v0.25.5)

--- a/packages/extension/src/content.scss
+++ b/packages/extension/src/content.scss
@@ -90,6 +90,7 @@
       width: unset !important;
       font-weight: normal !important;
       text-decoration: none !important;
+      text-transform: none !important;
       text-align: center !important;
       text-shadow: none !important;
       min-width: unset !important;
